--- a/src/app/catalog-page/categories-catalog-page/categories-catalog-page.component.scss
+++ b/src/app/catalog-page/categories-catalog-page/categories-catalog-page.component.scss
@@ -2,12 +2,13 @@
   max-width: 1499px;
   margin: 0 auto;
 }
-.container{
+.catalo-page__wrapper{
   margin-top: 80px;
   display: flex;
 }
 .bread-crumbs{
   margin-top: 35px;
+  margin-bottom: 60px;
   ul{
     margin: 0;
     padding: 0;
@@ -17,12 +18,17 @@
   li{
     padding-right: 20px;
     position: relative;
-    &::after {
-      content: ">";
+    &::after{
+      content: "";
+      background-image: url(/assets/images/svg/user/arrow-left-black.svg);
+      background-repeat: no-repeat;
+      background-size: contain;
       position: absolute;
-      right: 10px;
-      top: 50%;
-      transform: translateY(-50%);
+      top: 53%;
+      right: 7px;
+      transform: translateY(-50%) rotate(-180deg);
+      width: 6px;
+      height: 9px;
     }
     a{
       text-decoration: none;
@@ -66,6 +72,7 @@
     padding: 0;
     margin: 0;
     border-top: 0.5px solid #DCE0E6;
+    border-right: 0.5px solid #DCE0E6;
     box-shadow: 0px 10px 16px rgba(128, 152, 213, 0.2);
   }
   &__subcategories{
@@ -109,22 +116,62 @@
       background-color: #fff;
       cursor: pointer;
       outline: none;
+      img{
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+      }
+    }
+    a{
+      text-decoration: none;
     }
     &-title{
       margin: 0;
       width: fit-content;
-      a{
-        font-family: "Source Sans Pro";
-        font-weight: 600;
-        font-size: 18px;
-        line-height: 23px;
-        color: #323C47;
-        text-decoration: none;
-      }
+      font-family: "Source Sans Pro";
+      font-weight: 600;
+      font-size: 18px;
+      line-height: 23px;
+      padding-top: 14px;
+      color: #323C47;
+      max-width: 300px;
       &:hover{
-        a{
-          color: #3C7EEA;
-        }
+        color: #3C7EEA;
+      }
+    }
+  }
+}
+
+@media (max-width: 1499px) {
+  .bread-crumbs{
+    margin-top: 35px;
+    margin-bottom: 35px;
+  }
+  .wrapper{
+    max-width: 1109px;
+  }
+  .catalo-page__wrapper{
+    justify-content: space-between;
+  }
+  .category-title{
+    font-size: 36px;
+  }
+  .sidebar {
+    width: 255px;
+  }
+  .subcategories-list {
+    width: calc(100% - 270px);
+    .subcategory-full {
+      margin-bottom: 50px;
+      &-img{
+        width: 255px;
+        height: 180px;
+      }
+      &-title{
+        font-size: 16px;
+        line-height: 20px;
+        padding-top: 10px;
+        max-width: 255px;
       }
     }
   }
