--- a/src/app/service-page/components/service-page-another-services/service-page-another-services.component.html
+++ b/src/app/service-page/components/service-page-another-services/service-page-another-services.component.html
@@ -26,7 +26,9 @@
         </div>
       </div>
     </ng-container>
-
+  </div>
+  <div class="btn-wrapper">
+    <div class="btn-watch-more" [routerLink]="['/user', offerData.user_id]">больше услуг в профиле</div>
   </div>
 </section>
 
