--- a/src/app/user-page/user-page-services/user-page-services.component.html
+++ b/src/app/user-page/user-page-services/user-page-services.component.html
@@ -19,7 +19,7 @@
 
         </div>
         <div class="card-bottom">
-          <div class="card-bottom__like" [class.liked]="offer.liked"></div>
+          <div class="card-bottom__like"></div>
           <div class="card-bottom__price">
             от
             <span>{{offer.minPrice}}</span>
