--- a/src/app/user-page/user-page.component.scss
+++ b/src/app/user-page/user-page.component.scss
@@ -567,3 +567,46 @@
   line-height: 20px;
   color: #99ACB7;
 }
+
+@media (max-width: 1499px) {
+  .content {
+    max-width: 1110px;
+  }
+}
+
+@media (max-width: 1360px) {
+  .content {
+    max-width: 1010px;
+  }
+  .general-information {
+
+    &__avatar {
+      margin-right: 30px;
+    }
+    &__online {
+      span::before {
+        width: 9px;
+        height: 9px;
+      }
+    }
+    // &__lvl {}
+    &__available {
+      font-size: 14px;
+      line-height: 18px;
+    }
+    &__inProcess {
+      font-size: 14px;
+      line-height: 18px;
+    }
+    &__awaiting {
+      font-size: 14px;
+      line-height: 18px;
+    }
+  }
+  .switching-user-types{
+    &__text{
+      font-size: 14px;
+      line-height: 18px;
+    }
+  }
+}
