--- a/src/app/service-page/components/service-page/service-page.component.scss
+++ b/src/app/service-page/components/service-page/service-page.component.scss
@@ -605,11 +605,9 @@ app-service-page-checkout{
 
   //got
   .offer-rating {
-    margin-bottom: 80px;
-    .rating-type {
-      &.average{
-        display: none;
-      }
+    margin-bottom: 60px;
+    &::after{
+      bottom: -20px;
     }
   }
   
