--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/general-user-settings.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/general-user-settings.component.scss
@@ -221,22 +221,15 @@
 }
 
 .save-all{
-  // font-family: "Source Sans Pro", sans-serif;
-  // font-style: normal;
-  // font-weight: 600;
-  // font-size: 14px;
-  // line-height: 20px;
-  // display: flex;
-  // align-items: center;
-  // text-align: center;
-  // letter-spacing: 1px;
-
-  // color: #FFFFFF;
-  // background: #3C7EEA;
-  // box-shadow: 0px 2px 4px rgba(60, 9, 179, 0.3);
-  // border-radius: 4px;
-  // border: none;
   margin: 30px auto 20px;
-  // padding: 17px 35px 15px;
-  // text-transform: uppercase;
+}
+
+@media (max-width: 1499px) {
+  .inform_section{
+    display: flex;
+    &__title{
+      padding: 50px 30px;
+      width: 25%;
+    }
+  }
 }
